# design_patterns_python

./: README.md  pyproject.toml
.github/workflows/: unittest.yml
design_patterns/creational/: __init__.py  abstract_factory.py  builder.py  factory.py  prototype.py  singleton.py
design_patterns/structural/: adapter.py  bridge.py  composite.py  decorator.py  facade.py  flyweight.py  proxy.py
tests/: test_creational.py
tests/creational/: test_protoype.py
tests/structural/: test_adapter.py  test_bridge.py  test_composite.py  test_decorator.py  test_facade.py  test_flyweight.py  test_proxy.py
